Bug 301595 - category widget drawing problem
Summary: category widget drawing problem
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-10 18:03 UTC by Ralf Habacker
Modified: 2013-11-06 17:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments
screenshot which shows the problem (213.34 KB, image/png)
2012-06-10 18:04 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-06-10 18:03:47 UTC
Moving category widgets with non quadratic size result into drawing problems. 

This happens in version 2.8 and trunk. Those versions are not in the available version list 

Reproducible: Always

Steps to Reproduce:
1.Open umbrello
2. add entity relation diagram 
3. add category 
4. resize to non quadratic shape
5. move category widget 
Actual Results:  
widget is not drawed correctly as shown in the appended screenshot

Expected Results:  
widget should not produce drawing problems
Comment 1 Ralf Habacker 2012-06-10 18:04:19 UTC
Created attachment 71706 [details]
screenshot which shows the problem
Comment 2 Ralf Habacker 2012-06-10 20:42:09 UTC
SVN commit 1299642 by habacker:

fixed category widget resizing bug by enabling aspect ratio.


 M  +1 -0      categorywidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1299642
Comment 3 Ralf Habacker 2013-11-06 17:18:47 UTC
apply fixed bug from 4.9.0 changelog