fixed category widget resizing bug by enabling aspect ratio.

BUG:301595

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1299642